[package]
name = "eso"
version = "0.1.0"
edition = "2024"
# build = "build.rs"

[package.metadata.cargo-psp]

[dependencies]
aligned-vec = { version = "0.6.4", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
hashbrown = "0.15.3"
minipng = "0.1.1"
psp = "0.3.12"
spin = "0.10.0"

[build-dependencies]
tobj = { version = "4.0.3", default-features = false }
bytemuck = "1.23.0"


